[package]
name = "bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bench"

[dependencies]
durian = { path = "../durian" }
tokio = { version = "1.21.2", features = ["full"] }

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "benchmark"
harness = false
