[package]
name = "bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bench"

[dependencies]
durian.workspace = true
tokio.workspace = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false
