[package]
name = "durian"
version = "0.4.1"
authors = ["Michael Trinh <spookump@gmail.com>"]
categories = ["accessibility", "game-development", "network-programming", "games"]
keywords = ["durian", "macros", "netcode", "packets", "gamedev"]
description = "Client-server networking library built on top of the QUIC protocol, implemented in Rust by quinn."
homepage = "https://github.com/spoorn/durian"
repository = "https://github.com/spoorn/durian"
license = "MIT"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "durian"

[dependencies]
bimap = "0.6.3"
bytes = "1.4.0"
derive_more = "0.99.17"
hashbrown = "0.14.0"
rcgen = "0.11.1"
rustls = { version = "0.21.5", default-features = false, features = ["quic", "dangerous_configuration"] }
thiserror = "1.0.44"
tokio-test = "0.4.2"
# Read more on QUIC at https://http3-explained.haxx.se/
quinn = "0.10.1"
dashmap = "5.5.0"
log = "0.4.19"
durian_macros.workspace = true
indexmap = "2.0.0"
num_cpus = "1.16.0"
bincode.workspace = true
serde.workspace = true
tokio.workspace = true

[dev-dependencies]
test-log = "0.2.12"
env_logger = "0.10"
tracing = {version = "0.1", default-features = false}
tracing-subscriber = {version = "0.3", default-features = false, features = ["env-filter", "fmt"]}

[features]
default = []
