[package]
name = "durian_macros"
version = "0.3.0"
authors = ["Michael Trinh <spookump@gmail.com>"]
categories = ["accessibility", "game-development", "network-programming", "games"]
keywords = ["durian", "macros", "netcode", "packets", "gamedev"]
description = "Macros for the durian crate for ease of creating Packet structs"
homepage = "https://github.com/spoorn/durian"
repository = "https://github.com/spoorn/durian"
license = "MIT"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "durian_macros"

[dependencies]
durian_proc_macros.workspace = true

[dev-dependencies]
durian.workspace = true
